tests/should_fail/type_alias_conflicts_with_struct.nv
module main

// SHOULD FAIL: type alias redefines an existing struct name
struct Foo {
    x: Int
}
type Foo = Int
println("unreachable")
